syntax = "proto3";

// The service definition
service ComparatorService {
  rpc GetTopKPlans (TopKRequest) returns (TopKResponse) {};
  rpc CompareCost (CompareRequest) returns (DataResponse) {};
  rpc CanBeBroadcast (BroadcastRequest) returns (DataResponse) {};
}

message TopKRequest {
  repeated string plans = 1;
  int64 k = 2;
}

message TopKResponse {
  repeated int64 result = 1;
}


// The request message containing the data
message CompareRequest {
  repeated string plans = 1;
  string pivot = 2;
}

message BroadcastRequest {
  repeated string data = 1;
  repeated int64 threshold = 2;
}

// The response message containing the processed data
message DataResponse {
  repeated bool result = 1;
}
